# TpTheme-KDE

./: build.sh  install.sh
TpTheme-aurorae/: TpThemerc  metadata.desktop  metadata.json
TpTheme-kvantum/: MacTahoeDark-edit.kvconfig  TpTheme.kvconfig
TpTheme-plasma/: metadata.desktop  metadata.json  plasmarc
TpTheme-plasma/dialogs/: background.svgz
TpTheme-plasma/widgets/: clock.svgz  panel-background.svgz
WhiteSur-Rocket-cursors/: default  index.theme  left_ptr.in
desklets/: CMakeLists.txt  README.md
desklets/src/clock/: ClockWidget.cpp  ClockWidget.h  clock.qrc  clock.svgz  main.cpp
desklets/src/common/: ShapedBlurWindow.cpp  ShapedBlurWindow.h
desklets/src/journal/: JournalWidget.cpp  JournalWidget.h  main.cpp
desklets/src/journal2/: Journal2Widget.cpp  Journal2Widget.h  main.cpp  sysbar.sh
desklets/src/terminal/: TerminalWidget.cpp  TerminalWidget.h  main.cpp
scripts/: exclude-desklets-fixed.kwinscript  exclude-desklets.kwinscript
